--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+etersoft-build-utils-1.8.9: 20 Aug 2010
+- gpush: add some heroustic for default behavior
+- show git diff only for interactive session
+
 etersoft-build-utils-1.8.8: 27 Jul 2010
 - drop obsoleted code
 - gpull: do normal pull in additional to pull --rebase
