use rpm-build-compat on ALT <5.1

--- a/share/eterbuild/pkgrepl/pkgrepl.alt.4.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.alt.4.1
@@ -6,3 +6,4 @@ libgif|libungif
 ImageMagick-tools|ImageMagick
 
 kernel-build-tools|kernel-build-tools kernel-headers-modules-std-smp kernel-headers-modules-ovz-smp
+rpm-build-intro|rpm-build-compat
