update pkgrepl for ALT and MDV

--- a/share/eterbuild/pkgrepl/pkgrepl.mdv.2009.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.mdv.2009.1
@@ -4,3 +4,5 @@ libXcomposite|libxcomposite1
 libXpm|libxpm4
 libreadline-devel|libreadline-devel
 libreadline|libreadline6
+libldap-devel|libldap2.4_2-devel
+libldap|libldap2.4_2
