--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+See changelog in etersoft-build-utils.spec
+
 etersoft-build-utils-1.9.7: 19 Feb 2011
 - rpmbs/rpmbsh: move src.rpm to ETERDESTSRPM instead copying
 - rpmqf: add deb support
