--- a/share/eterbuild/pkgrepl/pkgrepl.mdv.2009.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.mdv.2009.1
@@ -6,3 +6,4 @@ libreadline-devel|libreadline-devel
 libreadline|libreadline6
 libldap-devel|libldap2.4_2-devel
 libldap|libldap2.4_2
+python-devel|libpython2.6-devel
