--- a/share/eterbuild/pkgrepl/pkgrepl.suse.11.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.11.3
@@ -1,3 +1,3 @@
 libwxGTK-devel|wxWidgets-wxcontainer-devel
 gst-plugins-devel|gstreamer-0_10-plugins-base-devel
-libopensc-devel|opensc
+libopensc-devel|opensc-devel
