--- a/share/eterbuild/pkgrepl/pkgrepl.centos.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.centos.6
@@ -1,6 +1,1 @@
-# perl-ExtUtils-Embed packed in perl package on ALT
-# For rpmbph: perl -> perl perl-ExtUtils-Embed
-perl|perl perl-ExtUtils-Embed
-
-# For rpmcs: perl-ExtUtils-Embed -> perl
-perl|perl-ExtUtils-Embed
+pkgrepl.scientific.6
