pkgrepl: check and fix wine build for Mandriva and SUSE

--- a/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
@@ -3,6 +3,7 @@ jackit|libjack
 # XOrg
 xorg-x11-proto-devel|xorg-x11-proto-devel
 libICE-devel|xorg-x11-libICE-devel
+libICE|xorg-x11-libICE
 libFS-devel|xorg-x11-libFS-devel
 libSM-devel|xorg-x11-libSM-devel
 libX11-devel|xorg-x11-libX11-devel
@@ -20,6 +21,7 @@ libXmu-devel|xorg-x11-libXmu-devel
 libXp-devel|xorg-x11-libXp-devel
 libXpm-devel|xorg-x11-libXpm-devel
 libXrender-devel|xorg-x11-libXrender-devel
+libXrender|xorg-x11-libXrender
 libXres-devel|xorg-x11-devel
 libXScrnSaver-devel|xorg-x11-devel
 libXinerama-devel|xorg-x11-devel
@@ -40,8 +42,18 @@ libXcursor-devel|xorg-x11-devel
 libXevie-devel|xorg-x11-devel
 libXv-devel|xorg-x11-libXv-devel
 
-libmesa-devel|Mesa
-libGLU-devel|Mesa
+libmesa-devel|Mesa-devel
+libGLU-devel|Mesa-devel
+libGL|Mesa
+libGL-devel|Mesa-devel
+libGLU|Mesa
 
 libgtkmm2-devel|gtkmm2-devel
 libesd-devel|esound-devel
+
+which|util-linux
+xrandr|
+xlsfonts|
+mount|util-linux
+libuuid|libuuid1
+fonts-ttf-core|liberation-fonts
