major update for pkgrepls

--- a/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
@@ -6,14 +6,20 @@ libICE-devel|xorg-x11-libICE-devel
 libICE|xorg-x11-libICE
 libFS-devel|xorg-x11-libFS-devel
 libSM-devel|xorg-x11-libSM-devel
+libSM|xorg-x11-libSM
 libX11-devel|xorg-x11-libX11-devel
+libX11|xorg-x11-libX11
 libXau-devel|xorg-x11-libXau-devel
+libXau|xorg-x11-libXau
 libXaw-devel|xorg-x11-devel
 libXrandr-devel|xorg-x11-devel
 libXdmcp-devel|xorg-x11-libXdmcp-devel
+libXdmcp|xorg-x11-libXdmcp
 libXfixes-devel|xorg-x11-libXfixes-devel
+libXfixes|xorg-x11-libXfixes
 libXfont-devel|xorg-x11-devel
 libXft-devel|xorg-x11-devel
+libXft|xorg-x11
 libXi-devel|xorg-x11-devel
 libXext-devel|xorg-x11-libXext-devel
 libXext|xorg-x11-libXext
@@ -26,14 +32,17 @@ libXres-devel|xorg-x11-devel
 libXScrnSaver-devel|xorg-x11-devel
 libXinerama-devel|xorg-x11-devel
 libXt-devel|xorg-x11-libXt-devel
+libXt|xorg-x11-libXt
 libXtst-devel|xorg-x11-devel
 libXcomposite-devel|xorg-x11-devel
 libXxf86dga-devel|xorg-x11-devel
 libXxf86vm-devel|xorg-x11-devel
+libXxf86vm|xorg-x11
 libXxf86misc-devel|xorg-x11-devel
 libdmx-devel|xorg-x11-libdmx-devel
 libfontenc-devel|xorg-x11-libfontenc-devel
 libXdamage-devel|xorg-x11-devel
+libXdamage|
 libxkbfile-devel|xorg-x11-libxkbfile-devel
 libxkbui-devel|xorg-x11-libxkbui-devel
 libXTrap-devel|xorg-x11-devel
@@ -41,6 +50,8 @@ libXvMC-devel|xorg-x11-devel
 libXcursor-devel|xorg-x11-devel
 libXevie-devel|xorg-x11-devel
 libXv-devel|xorg-x11-libXv-devel
+libXcomposite|xorg-x11
+libXpm|xorg-x11-libXpm
 
 libmesa-devel|Mesa-devel
 libGLU-devel|Mesa-devel
@@ -57,3 +68,6 @@ xlsfonts|
 mount|util-linux
 libuuid|libuuid1
 fonts-ttf-core|liberation-fonts
+
+libpng12|libpng12-0
+gst-plugins-devel|gstreamer-0_10-plugins-base-devel
