big pkgrepl rearrange

--- a/share/eterbuild/pkgrepl/pkgrepl.debian.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.6
@@ -5,3 +5,7 @@ gcc-c++|g++-4.4
 libstdc++6-devel|libstdc++6-4.4-dev
 libusb-devel|libusb-1.0-0-dev
 libusb|libusb-1.0-0
+libudev-devel|libudev-dev
+liblzma|liblzma2
+libltdl7|libltdl7
+libunistring|libunistring0
