--- a/share/eterbuild/pkgrepl/pkgrepl.debian.5
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.5
@@ -1,6 +1,9 @@
 diffutils|diff
-# xz is missed, has only lzma
-xz|lzma
 # is missed?
 docbook-utils|
 libstdc++6-devel|libstdc++6-4.3-dev
+libudev-devel|
+liblzma|
+libltdl7|libltdl3
+libunistring|
+libv4l-devel|
