major pkgrepl rewrite

--- a/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
@@ -41,7 +41,7 @@ libXxf86vm|xorg-x11
 libXxf86misc-devel|xorg-x11-devel
 libdmx-devel|xorg-x11-libdmx-devel
 libfontenc-devel|xorg-x11-libfontenc-devel
-libXdamage-devel|xorg-x11-devel
+libXdamage-devel|
 libXdamage|
 libxkbfile-devel|xorg-x11-libxkbfile-devel
 libxkbui-devel|xorg-x11-libxkbui-devel
@@ -58,6 +58,7 @@ libGLU-devel|Mesa-devel
 libGL|Mesa
 libGL-devel|Mesa-devel
 libGLU|Mesa
+
 
 libgtkmm2-devel|gtkmm2-devel
 libesd-devel|esound-devel
