--- a/share/eterbuild/pkgrepl/pkgrepl.debian.5
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.5
@@ -3,6 +3,9 @@ diffutils|diff
 docbook-utils|
 libstdc++6-devel|libstdc++6-4.3-dev
 libudev-devel|
+libudev1|
 libltdl7|libltdl3
 libunistring|
 libv4l-devel|
+libmpg123-devel|
+libmpg123|
