--- a/share/eterbuild/pkgrepl/pkgrepl.debian.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.6
@@ -6,6 +6,9 @@ libstdc++6-devel|libstdc++6-4.4-dev
 libusb-devel|libusb-1.0-0-dev
 libusb|libusb-1.0-0
 libudev-devel|libudev-dev
+libudev1|libudev0
 liblzma|liblzma2
 libltdl7|libltdl7
 libunistring|libunistring0
+libmpg123-devel|libmpg123-dev
+libmpg123|libmpg123-0
