--- a/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
@@ -13,6 +13,7 @@ libXau-devel|xorg-x11-libXau-devel
 libXau|xorg-x11-libXau
 libXaw-devel|xorg-x11-devel
 libXrandr-devel|xorg-x11-devel
+libXrandr|
 libXdmcp-devel|xorg-x11-libXdmcp-devel
 libXdmcp|xorg-x11-libXdmcp
 libXfixes-devel|xorg-x11-libXfixes-devel
@@ -24,6 +25,7 @@ libXi-devel|xorg-x11-devel
 libXext-devel|xorg-x11-libXext-devel
 libXext|xorg-x11-libXext
 libXmu-devel|xorg-x11-libXmu-devel
+libXmu|xorg-x11-libXmu
 libXp-devel|xorg-x11-libXp-devel
 libXpm-devel|xorg-x11-libXpm-devel
 libXrender-devel|xorg-x11-libXrender-devel
@@ -34,6 +36,7 @@ libXinerama-devel|xorg-x11-devel
 libXt-devel|xorg-x11-libXt-devel
 libXt|xorg-x11-libXt
 libXtst-devel|xorg-x11-devel
+libXtst|
 libXcomposite-devel|xorg-x11-devel
 libXxf86dga-devel|xorg-x11-devel
 libXxf86vm-devel|xorg-x11-devel
@@ -69,6 +72,8 @@ xlsfonts|
 mount|util-linux
 libuuid|libuuid1
 fonts-ttf-core|liberation-fonts
+# NX??
+fonts-ttf-liberation|liberation-fonts
 
 libpng12|libpng12-0
 gst-plugins-devel|gstreamer-0_10-plugins-base-devel
