--- a/share/eterbuild/pkgrepl/pkgrepl.debian.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.6
@@ -3,6 +3,7 @@ xz|xz-utils
 libicu|libicu44
 gcc-c++|g++-4.4
 libstdc++6-devel|libstdc++6-4.4-dev
+libstdc++-devel|libstdc++6-4.4-dev
 libusb-devel|libusb-1.0-0-dev
 libusb|libusb-1.0-0
 libudev-devel|libudev-dev
