--- a/share/eterbuild/pkgrepl/pkgrepl.debian.5
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.5
@@ -2,6 +2,7 @@ diffutils|diff
 # is missed?
 docbook-utils|
 libstdc++6-devel|libstdc++6-4.3-dev
+libstdc++-devel|libstdc++6-4.3-dev
 libudev-devel|
 libudev1|
 libltdl7|libltdl3
