fix pkgrepls for Mandriva, ROSA, SUSE

--- a/share/eterbuild/pkgrepl/pkgrepl.centos.5
+++ b/share/eterbuild/pkgrepl/pkgrepl.centos.5
@@ -1,9 +1,9 @@
 # perl-ExtUtils-Embed packed in perl package on ALT
 # For rpmbph: perl -> perl perl-ExtUtils-Embed
-perl|perl perl-ExtUtils-Embed
+#perl|perl perl-ExtUtils-Embed
 
 # For rpmcs: perl-ExtUtils-Embed -> perl
-perl|perl-ExtUtils-Embed
+#perl|perl-ExtUtils-Embed
 
 #ananas
 qt3-designer|qt-designer
