fix repls for libuuid, libXi, libfontconfig, libicu

--- a/share/eterbuild/pkgrepl/pkgrepl.mdv.2009.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.mdv.2009.1
@@ -3,3 +3,4 @@ libarts-devel|arts3-devel
 libreadline-devel|libreadline-devel
 libreadline|libreadline6
 python-devel|libpython2.6-devel
+libpython|libpython2.6
