--- a/share/eterbuild/pkgrepl/pkgrepl.scientific.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.scientific.6
@@ -2,3 +2,6 @@
 qt3-designer|qt3-designer
 libudev-devel|libudev-devel
 cifs-utils|cifs-utils
+
+libgphoto2-devel|libgphoto2-devel
+libgphoto2|libgphoto2
