major pkgrepls update

--- a/share/eterbuild/pkgrepl/pkgrepl.debian.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.7
@@ -3,3 +3,5 @@ libreadline-devel|libreadline6-dev
 libjpeg-devel|libjpeg8-dev
 libjpeg|libjpeg8
 libssl10|libssl1.0.0
+libwxGTK|libwxgtk2.8-0
+libwxGTK-devel|libwxgtk2.8-dev
