--- a/share/eterbuild/pkgrepl/pkgrepl.scientific.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.scientific.6
@@ -5,3 +5,6 @@ cifs-utils|cifs-utils
 
 libgphoto2-devel|libgphoto2-devel
 libgphoto2|libgphoto2
+
+fonts-ttf-core|liberation-mono-fonts liberation-sans-fonts liberation-serif-fonts
+fonts-ttf-liberation|liberation-mono-fonts liberation-sans-fonts liberation-serif-fonts
