--- a/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
@@ -2,3 +2,8 @@ liblzma|liblzma5
 libgmp3|libgmp10
 libjpeg|libjpeg62
 libpython|libpython2_7-1_0
+libwxGTK-devel|wxWidgets-wxcontainer-devel
+# too many subpackages
+libwxGTK|
+# missed??
+libopensc-devel|
