--- a/share/eterbuild/pkgrepl/pkgrepl.debian.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.6
@@ -1,6 +1,6 @@
 diffutils|diffutils
 xz|xz-utils
-libicu|libicu44
+libicu50|libicu44
 gcc-c++|g++-4.4
 libstdc++6-devel|libstdc++6-4.4-dev
 libstdc++-devel|libstdc++6-4.4-dev
