--- a/share/eterbuild/pkgrepl/pkgrepl.centos.5
+++ b/share/eterbuild/pkgrepl/pkgrepl.centos.5
@@ -9,5 +9,9 @@
 qt3-designer|qt-designer
 
 libudev-devel|coreutils
+libudev1|
 
 cifs-utils|samba-client
+
+libgnutls26-devel|gnutls-devel
+libgnutls26|gnutls
