--- a/share/eterbuild/pkgrepl/pkgrepl.debian.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.6
@@ -9,6 +9,7 @@ libusb|libusb-1.0-0
 libudev-devel|libudev-dev
 liblzma|liblzma2
 libltdl7|libltdl7
+libv4l|libv4l-0
 libunistring|libunistring0
 libmpg123-devel|libmpg123-dev
 libmpg123|libmpg123-0
