--- a/share/eterbuild/pkgrepl/pkgrepl.scientific.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.scientific.6
@@ -1,7 +1,10 @@
 
 qt3-designer|qt3-designer
 qt4-designer|qt4-designer
+
 libudev-devel|libudev-devel
+libudev1l|libudev
+
 cifs-utils|cifs-utils
 
 libgphoto2-devel|libgphoto2-devel
