--- a/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
@@ -33,6 +33,7 @@ libXrender|xorg-x11-libXrender
 libXres-devel|xorg-x11-devel
 libXScrnSaver-devel|xorg-x11-devel
 libXinerama-devel|xorg-x11-devel
+libXinerama|xorg-x11-libs
 libXt-devel|xorg-x11-libXt-devel
 libXt|xorg-x11-libXt
 libXtst-devel|xorg-x11-devel
@@ -51,6 +52,7 @@ libxkbui-devel|xorg-x11-libxkbui-devel
 libXTrap-devel|xorg-x11-devel
 libXvMC-devel|xorg-x11-devel
 libXcursor-devel|xorg-x11-devel
+libXcursor|xorg-x11-libs
 libXevie-devel|xorg-x11-devel
 libXv-devel|xorg-x11-libXv-devel
 libXcomposite|xorg-x11
