--- a/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
@@ -1,6 +1,7 @@
 liblzma|liblzma5
 libgmp3|libgmp10
 libjpeg|libjpeg62
+libjpeg-devel|libjpeg62-devel
 libpython|libpython2_7-1_0
 libwxGTK-devel|wxWidgets-wxcontainer-devel
 # too many subpackages
