commit all repls

--- a/share/eterbuild/pkgrepl/pkgrepl.scientific.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.scientific.6
@@ -3,7 +3,7 @@ qt3-designer|qt3-designer
 qt4-designer|qt4-designer
 
 libudev-devel|libudev-devel
-libudev1l|libudev
+libudev1|libudev
 
 cifs-utils|cifs-utils
 
