fix rpm-build-intro/compat using

--- a/share/eterbuild/pkgrepl/pkgrepl.alt.5.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.alt.5.1
@@ -1,2 +1,2 @@
-rpm-build-intro|rpm-build-intro
+rpm-build-intro|rpm-build-compat
 kernel-build-tools|kernel-build-tools kernel-headers-modules-std-def
