--- a/TODO
+++ b/TODO
@@ -1,11 +1,13 @@
-280 %buildhost ${USER:-`id -nu`}.hasher.altlinux.org
+Посмотреть rpmdevtools, обновить его.
+В нём такие команды как spectool -g -R mypackage.spec
 
-Mandriva не видит проблем с зависимостями при сборке...
+280 %buildhost ${USER:-`id -nu`}.hasher.altlinux.org
 
 Перепаковывать нужно внутри hasher - иначе макросы неверно раскрываются (особенно про python)
 
 Исправить ситуацию для 27.5.1 (MINOR - 1, MAJOR 27.5 должно быть), почему стирается %revision
 
+Использовать:
 # Source-git: http://git.altlinux.org/people/lav/packages/rpm-build-fonts.git
 # Source-md5: 792f3012eae343bc04314b868f6fd1b9
 
@@ -25,8 +27,7 @@ http://git.altlinux.org/people/kharpost/packages/gitalt-tasker.git?p=gitalt-task
 сделать раскрытие версии и имени пакета:
 fonts-ttf-%fname-1.04-alt1.src.rpm
 
-Нужно убирать BuildArch: noarch при бэкпортировании
-
+Нужно убирать BuildArch: noarch при бэкпортировании (из подпакетов)
 
 файлы с заменой:
 пакет ALT - пакет замены
