--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+Сделать команду проверки - во что заменится название пакета на такой-то системе.
+В принципе, это надо вынести из etersoft-build-utils в отдельный проект
+(который будет использоваться в eepm - но в него в скомпилированном виде, собирать при сборке).
+
 Посмотреть rpmdevtools, обновить его.
 В нём такие команды как spectool -g -R mypackage.spec
 
