--- a/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
@@ -9,3 +9,6 @@ libwxGTK-devel|wxWidgets-wxcontainer-devel
 libwxGTK|
 # missed??
 libopensc-devel|
+
+libopenal1|openal
+libopenal-devel|openal-devel
