--- a/share/eterbuild/pkgrepl/pkgrepl.debian.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.7
@@ -8,3 +8,5 @@ libwxGTK-devel|libwxgtk2.8-dev
 libXxf86misc-devel|
 libicu50|libicu48
 libpng12|libpng12-0
+libudev-devel|libudev-dev
+libudev1|libudev0
