--- a/share/eterbuild/pkgrepl/pkgrepl.suse.12.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.12.3
@@ -4,3 +4,7 @@ libXmu|libXmu6
 libjpeg|libjpeg8
 libXfixes|libXfixes3
 libgphoto2|libgphoto2-6
+
+libopenal1|openal-soft
+libopenal-devel|openal-soft-devel
+
