add liblcms2 support

--- a/share/eterbuild/pkgrepl/pkgrepl.centos.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.centos.7
@@ -14,8 +14,10 @@ mount|util-linux
 glibc|glibc glibc.i686
 
 #for wine
-liblcms|lcms2
-liblcms-devel|lcms2-devel
+liblcms|
+liblcms-devel|
+liblcms2|lcms2
+liblcms2-devel|lcms2-devel
 libudev|libgudev1
 libudev-devel|libgudev1-devel
 libudev1|libgudev1
