--- a/share/eterbuild/pkgrepl/pkgrepl.redhat.9
+++ b/share/eterbuild/pkgrepl/pkgrepl.redhat.9
@@ -1,6 +1,7 @@
 # RedHat replacements rules
 # http://web.mit.edu/afs/athena/system/rhlinux/redhat-9/RedHat/RPMS/
 liblcms-devel|
+liblcms2-devel|
 jackit-devel|
 libieee1284-devel|
 perl-devel|perl
