--- a/share/eterbuild/pkgrepl/pkgrepl.scientific.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.scientific.6
@@ -11,5 +11,10 @@ libgphoto2-devel|libgphoto2-devel
 libgphoto2-6|libgphoto2
 libgphoto2_port-12|libgphoto2
 
+liblcms-devel|lcms-devel
+liblcms|lcms
+liblcms2-devel|lcms2-devel
+liblcms2|lcms2
+
 fonts-ttf-core|liberation-mono-fonts liberation-sans-fonts liberation-serif-fonts
 fonts-ttf-liberation|liberation-mono-fonts liberation-sans-fonts liberation-serif-fonts
