--- a/TODO
+++ b/TODO
@@ -1,3 +1,12 @@
+Посмотреть genspec
+
+Что можно сделать для адаптирования под gear (сайт)
+
+rpmbs -u в не git-каталоге даёт непонятный результат
+
+GIRARHOST в основном используется как ssh alias, но иногда используется как git remote, а это не обязательно одно и то же.
+Надо если мы в репозитории, и есть такой remote, то преобразовывать, вынимая хост из git remote
+
 Сделать команду проверки - во что заменится название пакета на такой-то системе.
 В принципе, это надо вынести из etersoft-build-utils в отдельный проект
 (который будет использоваться в eepm - но в него в скомпилированном виде, собирать при сборке).
