--- a/share/eterbuild/pkgrepl/pkgrepl.debian.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.6
@@ -15,3 +15,6 @@ libmpg123-devel|libmpg123-dev
 libmpg123|libmpg123-0
 cifs-utils|cifs-utils
 glibc-utils|libc-bin
+liblcms2-devel|liblcms1-dev
+liblcms2|liblcms1
+libunixODBC-devel|unixodbc-dev
