--- a/share/eterbuild/pkgrepl/pkgrepl.scientific.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.scientific.6
@@ -8,6 +8,7 @@ libudev1|libudev
 cifs-utils|cifs-utils
 
 libgphoto2-devel|libgphoto2-devel
+libgphoto2|libgphoto2
 libgphoto2-6|libgphoto2
 libgphoto2_port-12|libgphoto2
 
@@ -18,3 +19,5 @@ liblcms2|lcms2
 
 fonts-ttf-core|liberation-mono-fonts liberation-sans-fonts liberation-serif-fonts
 fonts-ttf-liberation|liberation-mono-fonts liberation-sans-fonts liberation-serif-fonts
+
+perl-XML-LibXML|perl-XML-LibXML.i686
