--- a/share/eterbuild/pkgrepl/pkgrepl.suse.13.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.13.1
@@ -10,3 +10,6 @@ libgphoto2_port-12|libgphoto2-6
 libopenal1|openal-soft
 libopenal-devel|openal-soft-devel
 
+libudev0|libudev1
+libudev1|libudev1
+liblcms2-devel|liblcms2-devel
