--- a/share/eterbuild/pkgrepl/pkgrepl.suse.12.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.12.3
@@ -4,9 +4,8 @@ libXmu|libXmu6
 libjpeg|libjpeg8
 libXfixes|libXfixes3
 libgphoto2|libgphoto2-6
+libgphoto2-6|libgphoto2-6
 libgphoto2_port-12|libgphoto2-6
 
 libopenal1|openal-soft
 libopenal-devel|openal-soft-devel
-
-liblcms2-devel|liblcms2-devel
