ALT Linux Sisyphus has libwxGTK3.1, switch to it

--- a/share/eterbuild/pkgrepl/pkgrepl.debian.8
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.8
@@ -2,8 +2,8 @@ gcc-c++|g++-4.9
 libjpeg|libjpeg62-turbo
 libjpeg8|libjpeg62-turbo
 libjpeg-devel|libjpeg62-turbo-dev
-libwxGTK|libwxgtk3.0-0
-libwxGTK-devel|libwxgtk3.0-dev
+libwxGTK3.1|libwxgtk3.0-0
+libwxGTK3.1-devel|libwxgtk3.0-dev
 
 
 #wine
