--- a/share/eterbuild/pkgrepl/pkgrepl.debian.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.7
@@ -3,8 +3,8 @@ libreadline-devel|libreadline6-dev
 libjpeg-devel|libjpeg8-dev
 libjpeg|libjpeg8
 libssl10|libssl1.0.0
-libwxGTK|libwxgtk2.8-0
-libwxGTK-devel|libwxgtk2.8-dev
+libwxGTK3.1|libwxgtk2.8-0
+libwxGTK3.1-devel|libwxgtk2.8-dev
 libXxf86misc-devel|
 libicu50|libicu48
 libpng12|libpng12-0
