--- a/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
@@ -4,9 +4,9 @@ libjpeg|libjpeg62
 libjpeg-devel|libjpeg62-devel
 libpython|libpython2_7-1_0
 # FIXME: wxWidgets-devel is more correct way, can we compile with it? (see wxWidgets-compat-lib-config package description)
-libwxGTK-devel|wxWidgets-wxcontainer-devel
+libwxGTK3.1-devel|wxWidgets-wxcontainer-devel
 # too many subpackages
-libwxGTK|
+libwxGTK3.1|
 # missed??
 libopensc-devel|
 
