--- a/TODO
+++ b/TODO
@@ -2,11 +2,6 @@
 
 Что можно сделать для адаптирования под gear (сайт)
 
-rpmbs -u в не git-каталоге даёт непонятный результат
-
-GIRARHOST в основном используется как ssh alias, но иногда используется как git remote, а это не обязательно одно и то же.
-Надо если мы в репозитории, и есть такой remote, то преобразовывать, вынимая хост из git remote
-
 Сделать команду проверки - во что заменится название пакета на такой-то системе.
 В принципе, это надо вынести из etersoft-build-utils в отдельный проект
 (который будет использоваться в eepm - но в него в скомпилированном виде, собирать при сборке).
@@ -31,17 +26,6 @@ GIRARHOST в основном используется как ssh alias, но и
 
 http://git.altlinux.org/people/kharpost/packages/gitalt-tasker.git?p=gitalt-tasker.git;a=blob;f=gitalt-tasker/git-task;h=81e0261813a9fe2be230fb0c47b4ff4efd9a2675;hb=bfcc80b9af49b8ea0629db80d4c2f29a024d574e
 
-Добавить поддержку в спеке служебного комментария для автоматической перепаковки исходников:
-Учитывать gear
-# Source0 repack DIR - упаковать DIR в архив с названием NAME-VERSION
-# Source1 remove DIR/FILE [DIR/FILE] - удалить указанные каталоги и файлы и упаковать
-
-
-сделать раскрытие версии и имени пакета:
-fonts-ttf-%fname-1.04-alt1.src.rpm
-
-Нужно убирать BuildArch: noarch при бэкпортировании (из подпакетов)
-
 файлы с заменой:
 пакет ALT - пакет замены
 pkgrepl.rpm - базовый, используется всегда
@@ -57,29 +41,19 @@ pkgrepl.pclinux.2007 - для конкретной версии системы
 тоже желательно не забыть (в том числе в части, касающейся 
 макроподстановок). Но это, кажется, ещё более сложная задача.
 
-
- 
-=== Версия 1.7 ===
- - Не трогать часть файла после %changelog при rpmcs
- - добавить сборки раскидавшихся зависимостей на Иксы в одну
 # - rpmbph для src.rpm (через hasher):
 #   --init-root, .in, rpm -i src.rpm, rpmbph (не собирающий в hasher), .out { команды в скобках }
 #   чтобы спек исправлял прямо в hasher при сборке??
  - подготовить текст новости, порекламировать
  + обновить/сделать страницу с описанием проекта?
-
-=== Версия 1.8 ===
 # + how to use --build-args= for hsh? - проброс параметров в myhsh как параметров для rpm
  - Сделать нормальную документацию?
  - получение спеков из других проектов, с отчётом об обновлении (diff между)
  - исправить формирование .pot
  - исправить способ создания pot -и echog (заметить на message)
 
-=== Версия 2.0 ===
  - удалить файл /etc/rpm/*functions
- - доделать проверку на качество лицензии в LICENSE и содержимое INSTALL
- - TODO: добавить возможность указания запускаемой команды
-   (разделяя строку параметров на до -- и после)
+# - доделать проверку на качество лицензии в LICENSE и содержимое INSTALL
  - -i -u требуют именно такого порядка использования
 # - перейти на общую обработку всех команд (одним скриптом)?
 
@@ -100,13 +74,3 @@ $ while read l; do a="$l"; done < <(echo "$list")
 $ echo $a
 line3
 
-
-> >>:) 3. Было бы здорово, чтобы скрипты сначала проверяли
-> >>
-> >>передаваемые им аргументы, а потом начинали печатать
-> >> служебную информацию, как то какой apt.conf они будут
-> >> использовать.
-> >
-> >Не понял проблемы.
->
-> Попробуйте написать rpmgs --help :)
