--- a/TODO
+++ b/TODO
@@ -1,3 +1,22 @@
+Применить shell check или что-то подобное
+https://www.google.ru/search?q=lint+bash
+
+Given a version number MAJOR.MINOR.PATCH, increment the:
+
+    MAJOR version when you make incompatible API changes,
+    MINOR version when you add functionality in a backwards-compatible manner, and
+    PATCH version when you make backwards-compatible bug fixes.
+
+Additional labels for pre-release and build metadata are available as extensions to the MAJOR.MINOR.PATCH format.
+http://semver.org/
+
+Проблемы c dpkg:
+1. применяется tar.xz, что не подходит для старых систем
+2. нужен неисправленный alien (то есть готовить архив в два приёма)
+В итоге, надо перенести конвертацию в саму систему
+
+Скрипт update-kernel стал примером того, как стоит писать разбор параметров
+
 Посмотреть genspec
 
 Что можно сделать для адаптирования под gear (сайт)
