improve suse pkgrepls

--- a/share/eterbuild/pkgrepl/pkgrepl.suse.13.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.13.1
@@ -1,5 +1,7 @@
 libpng-devel|libpng16-devel
+libpng15l|libpng16-16
 libpng12-devel|libpng12-devel
+libpng12l|libpng12-0
 
 libudev0|libudev1
 libudev1|libudev1
