fix Mesa/GL for SUSE

--- a/share/eterbuild/pkgrepl/pkgrepl.suse.13.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.13.1
@@ -7,3 +7,9 @@ libudev0|libudev1
 libudev1|libudev1
 
 liblcms2|liblcms2-2
+
+libmesa-devel|Mesa-libGL-devel
+libGL|Mesa-libGL
+libGL-devel|Mesa-libGL-devel
+libGLU-devel|glu-devel
+libGLU|libGLU1
