--- a/TODO
+++ b/TODO
@@ -1,17 +1,6 @@
 Нужно проще получать спек с раскрытыми переменными
 Нужно научиться получать из него также значение Source-(url|git)N
 
-Source-git:
-git remote add upstream
-git fetch
-git merge vVERSION
-add_changelog
-gammit
-
-ia32-libs не прибавляется к x86_64 там, где это нужно (Astra)
-
-rpmgs комиттит в текущий каталог!!!
-
 $ GIT_ALT=gear.alt girar-show
 
 https://www.altlinux.org/Gear/remotes
@@ -35,6 +24,8 @@ http://semver.org/
 Посмотреть genspec
 
 Что можно сделать для адаптирования под gear (сайт)
+
+Внешние списки соответствия файлов и пакетов для разных дистрибутивов -> соответствие названий пакетов?
 
 Сделать команду проверки - во что заменится название пакета на такой-то системе.
 В принципе, это надо вынести из etersoft-build-utils в отдельный проект
