--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Пытаться выводить относительные пути для выводимых путей (к спеку при rpmbph). Возможно ли общее решение... К каталогу первоначального запуска?
+
 Нужно проще получать спек с раскрытыми переменными
 Нужно научиться получать из него также значение Source-(url|git)N
 
