pkgrepls: Sisyphus uses libpng16 by default now

--- a/share/eterbuild/pkgrepl/pkgrepl.suse.13.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.13.1
@@ -1,7 +1,5 @@
 libpng-devel|libpng16-devel
-libpng15l|libpng16-16
-libpng12-devel|libpng12-devel
-libpng12l|libpng12-0
+libpng16|libpng16-16
 
 libudev0|libudev1
 libudev1|libudev1
