add libpng15 due W@E compatibility

--- a/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.10.3
@@ -74,5 +74,6 @@ xlsfonts|
 mount|util-linux
 libuuid|libuuid1
 
+libpng15|libpng12-0
 libpng16|libpng12-0
 gst-plugins-devel|gstreamer-0_10-plugins-base-devel
