--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+
+rpmbb -i не пишет логи
+
 loginhsh должен делать абсолютные пути для файлов пакетов, которые ему передаются
 
 Пытаться выводить относительные пути для выводимых путей (к спеку при rpmbph). Возможно ли общее решение... К каталогу первоначального запуска?
