pkgrepl: add libicu60 support

--- a/share/eterbuild/pkgrepl/pkgrepl.debian.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.6
@@ -1,6 +1,7 @@
 diffutils|diffutils
 xz|xz-utils
 libicu56|libicu44
+libicu60|libicu44
 gcc-c++|g++-4.4
 libstdc++6-devel|libstdc++6-4.4-dev
 libstdc++-devel|libstdc++6-4.4-dev
