--- a/share/eterbuild/pkgrepl/pkgrepl.debian.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.7
@@ -13,6 +13,7 @@ libwxGTK-devel|libwxgtk2.8-dev
 
 libXxf86misc-devel|
 libicu56|libicu48
+libicu60|libicu48
 libpng15|libpng12-0
 libpng16|libpng12-0
 libudev-devel|libudev-dev
