add libwxGTK3.0 support

--- a/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.11.4
@@ -4,6 +4,9 @@ libjpeg|libjpeg62
 libjpeg-devel|libjpeg62-devel
 libpython|libpython2_7-1_0
 # FIXME: wxWidgets-devel is more correct way, can we compile with it? (see wxWidgets-compat-lib-config package description)
+libwxGTK3.0-devel|wxWidgets-devel
+# too many subpackages
+libwxGTK3.0|
 libwxGTK3.1-devel|wxWidgets-devel
 # too many subpackages
 libwxGTK3.1|
