--- a/share/eterbuild/pkgrepl/pkgrepl.centos.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.centos.7
@@ -39,4 +39,8 @@ python3-dev|python36-devel
 python3-module-setuptools|python36-setuptools
 python3-module-pykwalify|python36-pykwalify
 python3-module-ruamel-yaml|python36-ruamel-yaml
-
+python3-module-redis-py|python3-redis
+python3-base|python3
+php7-redis|php-pecl-redis
+libcairo|cairo
+libcairo-devel|cairo-devel
