--- a/share/eterbuild/pkgrepl/pkgrepl.debian.9
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.9
@@ -16,3 +16,12 @@ libwxGTK3.1-devel|libwxgtk3.0-dev
 libwxGTK|libwxgtk3.0-0v5
 libwxGTK-devel|libwxgtk3.0-dev
 libsigc++2|libsigc++-2.0-0v5
+
+liblcms-devel|
+liblcms|
+libtiff-devel|libtiff-dev
+
+fonts-ttf-core|fonts-liberation2
+fonts-ttf-liberation|fonts-liberation2
+
+libtirpc|libtirpc3
