--- a/share/eterbuild/pkgrepl/pkgrepl.scientific.6
+++ b/share/eterbuild/pkgrepl/pkgrepl.scientific.6
@@ -31,7 +31,8 @@ libwxGTK3.1-devel|wxGTK3-devel
 libwxGTK|wxGTK3
 
 xorg-proto-devel|xorg-x11-proto-devel
-xorg-font-utils|xorg-x11-font-utils bdftruncate
+xorg-font-utils|xorg-x11-font-utils
 libX11-locales|libX11-common
 
-python-dev|python-devel
+libicu38|libicu
+libicu38-devel|libicu-devel
