--- a/share/eterbuild/pkgrepl/pkgrepl.suse.12.2
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.12.2
@@ -17,7 +17,9 @@ libXdmcp|libXdmcp
 libXfixes-devel|libXfixes-devel
 libXfixes|libXfixes
 libXfont-devel|libXfont-devel
+libXfont2-devel|libXfont2-devel
 libXfont|libXfont1
+libXfont2|libXfont2
 libXft-devel|libXft-devel
 libXft|libXft2
 libXi-devel|libXi-devel
