--- a/share/eterbuild/pkgrepl/pkgrepl.centos.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.centos.7
@@ -57,7 +57,11 @@ python3-module-pykwalify|python36-pykwalify
 python3-module-ruamel-yaml|python36-ruamel-yaml
 python3-module-redis-py|python3-redis
 python3-base|python3
-php7-redis|php-pecl-redis
+
+# FIXME
+#nginx|
+php7-redis|
+#php7-redis|php-pecl-redis
 
 # REMOVE after fix prev redos issue:
 libX11-locales|libX11-common
@@ -66,4 +70,6 @@ xorg-font-utils|xorg-x11-font-utils
 libcups-devel|cups-devel zlib-devel libcom_err-devel
 
 #libcap-utils|
-libpcap0.8|libpcap
+
+libSDL2|
+libSDL2-devel|
