--- a/share/eterbuild/pkgrepl/pkgrepl.centos.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.centos.7
@@ -10,6 +10,10 @@ libsmbclient-devel|libsmbclient-devel
 xorg-proto-devel|xorg-x11-proto-devel
 libpixman-devel|pixman-devel
 libpixman|pixman
+pulseaudio-daemon|pulseaudio-utils pulseaudio 
+
+#FIXME: mistake dAEmon instead dEAmon  
+pulseaudio-deamon|
 
 #for haspd
 mount|util-linux
