pkgrepl: update repl rules

--- a/share/eterbuild/pkgrepl/pkgrepl.rockylinux.8
+++ b/share/eterbuild/pkgrepl/pkgrepl.rockylinux.8
@@ -5,3 +5,8 @@ patchelf|
 # TODO:
 libudev-devel|
 
+# old libs
+libXfont-devel|libXfont2-devel
+libXfont|libXfont2
+
+pulseaudio-daemon|pulseaudio-utils pipewire-pulseaudio
