--- a/share/eterbuild/pkgrepl/pkgrepl.alteros.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.alteros.7
@@ -1,1 +1,79 @@
-pkgrepl.centos.7
+#for nx
+libatkmm|atkmm
+libglibmm|glibmm24
+libgtkmm2|gtkmm24
+libsigc++2|libsigc++20
+libesd-devel|
+vixie-cron|cronie
+libsmbclient|libsmbclient
+libsmbclient-devel|libsmbclient-devel
+xorg-proto-devel|xorg-x11-proto-devel
+libpixman-devel|pixman-devel
+libpixman|pixman
+pulseaudio-daemon|pulseaudio-utils pulseaudio 
+
+#FIXME: mistake dAEmon instead dEAmon  
+pulseaudio-deamon|
+
+#for haspd
+mount|util-linux
+
+#for wine
+liblcms|
+liblcms-devel|
+liblcms2|lcms2
+liblcms2-devel|lcms2-devel
+libudev|systemd
+libudev-devel|systemd-devel
+libudev1|systemd
+#libwine-devel|
+#libwine-etersoft-devel|
+libhal-devel|
+i586-libhal-devel|
+# RedOS/7 - libusbx
+libusb|libusbx
+libusb-devel|libusbx-devel
+libcrypto1.1|openssl-libs
+
+perl-XML-LibXML|
+
+#libwxGTK-devel|wxGTK3-devel
+#libwxGTK|wxGTK3
+
+libwxGTK3.0-devel|wxGTK3-devel
+libwxGTK3.0|wxGTK3
+libwxGTK3.1-devel|wxGTK-devel
+libwxGTK3.1|wxGTK
+
+libwxBase3.0|wxBase3
+libwxBase-devel|wxBase-devel
+libwxBase3.1-devel|wxBase-devel
+libwxBase3.1|wxBase
+
+
+python-module-Cython|Cython
+
+python3-dev|python36-devel
+# FIXME: if_with test BRs do not converted!
+#python3-module-setuptools|python36-setuptools
+python3-module-setuptools|
+python3-module-pykwalify|python36-pykwalify
+python3-module-ruamel-yaml|python36-ruamel-yaml
+python3-module-redis-py|python3-redis
+python3-base|python3
+
+# FIXME
+#nginx|
+php7-redis|
+#php7-redis|php-pecl-redis
+
+# REMOVE after fix prev redos issue:
+libX11-locales|libX11-common
+xorg-font-utils|xorg-x11-font-utils
+
+libcups-devel|cups-devel zlib-devel libcom_err-devel
+
+#libcap-utils|
+
+libXpresent-devel|
+libXpresent|
