--- a/share/eterbuild/pkgrepl/pkgrepl.debian.9
+++ b/share/eterbuild/pkgrepl/pkgrepl.debian.9
@@ -7,6 +7,7 @@ libpng16|libpng16-16
 libpng-devel|libpng-dev
 #libssl10|libssl1.1.0
 libcrypto1.1|libssl1.1
+libcrypto3|libssl1.1
 
 #NX
 libwxGTK3.0|libwxgtk3.0-0v5
