pkgrepl: update rules

--- a/share/eterbuild/pkgrepl/pkgrepl.centos.7
+++ b/share/eterbuild/pkgrepl/pkgrepl.centos.7
@@ -12,6 +12,10 @@ libpixman-devel|pixman-devel
 libpixman|pixman
 pulseaudio-daemon|pulseaudio-utils pulseaudio 
 
+#for rx
+libgio|glib2
+fuse-gvfs|gvfs-fuse
+
 #FIXME: mistake dAEmon instead dEAmon  
 pulseaudio-deamon|
 
@@ -74,3 +78,4 @@ xorg-font-utils|xorg-x11-font-utils
 libcups-devel|cups-devel zlib-devel libcom_err-devel
 
 #libcap-utils|
+archivemount|
