--- a/share/eterbuild/pkgrepl/pkgrepl.rockylinux.8
+++ b/share/eterbuild/pkgrepl/pkgrepl.rockylinux.8
@@ -10,3 +10,8 @@ libXfont-devel|libXfont2-devel
 libXfont|libXfont2
 
 pulseaudio-daemon|pulseaudio-utils pipewire-pulseaudio
+zenity|yad
+
+#rx 
+libgio|glib2
+fuse-gvfs|gvfs-fuse
